--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
   --color-text-primary: #FFFFFF;
   --color-text-secondary: #B0B0B0;
   --color-accent-primary: #4FC3F7;
-  --color-accent-secondary: #81C784;
-  --color-border: #3A3A3A;
+  --color-success: #10b959;
+  --color-border: #454545;
   --color-error: #EF5350;
   --color-warning: #FFCA28;
   --color-info: #29B6F6;
@@ -30,15 +30,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
@@ -57,25 +48,6 @@ h2 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
 @media (prefers-color-scheme: light) {
   :root {
     --color-bg: #F9FAFB;
@@ -84,7 +56,7 @@ button:focus-visible {
     --color-text-primary: #111827;
     --color-text-secondary: #6B7280;
     --color-accent-primary: #2563EB;
-    --color-accent-secondary: #10B981;
+    --color-success: #10b959;
     --color-border: #E5E7EB;
     --color-error: #EF4444;
     --color-warning: #F59E0B;
