--- a/src/index.css
+++ b/src/index.css
@@ -1,73 +1,80 @@
 :root {
-  --color-bg: #242424;
-  --color-surface: #2F2F2F;
-  --color-surface-secondary: #404040;
-  --color-text-primary: #FFFFFF;
-  --color-text-secondary: #B0B0B0;
-  --color-accent-primary: #4FC3F7;
-  --color-success: #10b959;
-  --color-border: #454545;
-  --color-error: #EF5350;
-  --color-warning: #FFCA28;
-  --color-info: #29B6F6;
+    --color-bg: #242424;
+    --color-surface: #2F2F2F;
+    --color-surface-secondary: #404040;
+    --color-text-primary: #FFFFFF;
+    --color-text-secondary: #B0B0B0;
+    --color-accent-primary: #4FC3F7;
+    --color-success: #10b959;
+    --color-border: #454545;
+    --color-error: #EF5350;
+    --color-warning: #FFCA28;
+    --color-info: #29B6F6;
 
-  --box-shadow: rgba(255, 255, 255, 0.05) 0px 7px 29px 0px;
-  --border-radius: 25px;
+    --box-shadow: rgba(255, 255, 255, 0.05) 0px 7px 29px 0px;
+    --border-radius: 25px;
+
+    --basic-element-background-color: 255, 255, 255;
+    --color-text-light: #FFFFFF;
+    --color-text-dark: #111827;
 }
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
 
-  color-scheme: light dark;
-  color: var(--color-text-primary);
-  background-color: var(--color-bg);
+    color-scheme: light dark;
+    color: var(--color-text-primary);
+    background-color: var(--color-bg);
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    margin: 0;
+    display: flex;
+    place-items: center;
+    min-width: 320px;
+    min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+    font-size: 3.2em;
+    line-height: 1.1;
 }
 
 h2 {
-  font-size: 1.8em;
-  line-height: 1.1;
+    font-size: 1.8em;
+    line-height: 1.1;
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    --color-bg: #F9FAFB;
-    --color-surface: #FFFFFF;
-    --color-surface-secondary: #FBFBFB;
-    --color-text-primary: #111827;
-    --color-text-secondary: #6B7280;
-    --color-accent-primary: #2563EB;
-    --color-success: #10b959;
-    --color-border: #E5E7EB;
-    --color-error: #EF4444;
-    --color-warning: #F59E0B;
-    --color-info: #3B82F6;
+    :root {
+        --color-bg: #F9FAFB;
+        --color-surface: #FFFFFF;
+        --color-surface-secondary: #FBFBFB;
+        --color-text-primary: #111827;
+        --color-text-secondary: #6B7280;
+        --color-accent-primary: #2563EB;
+        --color-success: #10b959;
+        --color-border: #E5E7EB;
+        --color-error: #EF4444;
+        --color-warning: #F59E0B;
+        --color-info: #3B82F6;
 
-    --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+        --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        --basic-element-background-color: 128, 128, 128;
+    }
+
+    a:hover {
+        color: #747bff;
+    }
+
+    button {
+        background-color: #f9f9f9;
+    }
 }
