--- a/src/components/kunden-form/KundenForm.css
+++ b/src/components/kunden-form/KundenForm.css
@@ -6,10 +6,19 @@
 
     border: 1px solid var(--color-border);
     border-radius: var(--border-radius);
-    padding: 0 3% 3% 3%;
 
     box-shadow: var(--box-shadow);
     background-color: var(--color-surface);
+    width: 100%;
+    height: 90vh;
+}
+
+.kunden-eingabe-content {
+    padding: 3%;
+    width: calc(100% - 6%);
+    height: calc(100% - 3%);
+    display: flex;
+    flex-direction: column;
 }
 
 .kunden-form {
@@ -26,7 +35,7 @@
 .add-schienenabschnitt-button {
     font-size: 1rem;
     border: 2px solid var(--color-border);
-    border-radius: 4px;
+    border-radius: var(--border-radius);
     padding: 4px 8px;
     outline: none;
     background-color: var(--color-surface);
@@ -36,7 +45,7 @@
 .save-button {
     font-size: 1rem;
     border: 1px solid var(--color-border);
-    border-radius: 4px;
+    border-radius: var(--border-radius);
     background-color: var(--color-success);
     cursor: pointer;
     color: var(--color-text-light);
