--- a/src/components/kunden-inputs/KundenInputs.css
+++ b/src/components/kunden-inputs/KundenInputs.css
@@ -16,7 +16,7 @@
 .input-field {
     width: 100%;
     border: 1px solid var(--color-border);
-    border-radius: 4px;
+    border-radius: var(--border-radius);
     background-color: var(--color-surface);
     color: var(--color-text-secondary);
     height: 2.5rem;
