--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,10 @@
     --color-error: #EF5350;
     --color-warning: #FFCA28;
     --color-info: #29B6F6;
+    --color-card: #242424;
 
     --box-shadow: rgba(255, 255, 255, 0.05) 0px 7px 29px 0px;
-    --border-radius: 25px;
+    --border-radius: 12px;
 
     --basic-element-background-color: 255, 255, 255;
     --color-text-light: #FFFFFF;
@@ -45,11 +46,17 @@ body {
 h1 {
     font-size: 3.2em;
     line-height: 1.1;
+    margin: 0 0 1rem;
 }
 
 h2 {
     font-size: 1.8em;
     line-height: 1.1;
+    margin: 0 0 1.5rem;
+}
+
+h3 {
+    margin: 0 0 0.5rem;
 }
 
 @media (prefers-color-scheme: light) {
@@ -65,6 +72,7 @@ h2 {
         --color-error: #EF4444;
         --color-warning: #F59E0B;
         --color-info: #3B82F6;
+        --color-card: #f5f7fa;
 
         --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         --basic-element-background-color: 128, 128, 128;
