added API implementation to the dashboard change the API implementation adjusted design for KundeForm components switch on buttons press now

--- a/src/components/schienenabschnitt-table/SchienenabschnittTable.css
+++ b/src/components/schienenabschnitt-table/SchienenabschnittTable.css
@@ -18,7 +18,7 @@
 }
 
 .schienenabschnitt-table {
-    max-height: 42vh;
+    height: 20vh;
     overflow-y: auto;
     border: 1px solid var(--color-border);
     border-radius: var(--border-radius);
