--- a/src/components/kunden-form/KundenForm.css
+++ b/src/components/kunden-form/KundenForm.css
@@ -23,6 +23,24 @@
 
 .kunden-form {
     width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.schienenabschnitt-table-card {
+    flex-grow: 1;
+    border-radius: var(--border-radius);
+    background-color: var(--color-card);
+    padding: 1rem 1.5rem;
+}
+
+.kunden-inputs-card {
+    flex: 1;
+    border-radius: var(--border-radius);
+    background-color: var(--color-card);
+    padding: 1rem 1.5rem;
 }
 
 .button-group {
