--- a/src/components/schienenabschnitt-table/SchienenabschnittTable.css
+++ b/src/components/schienenabschnitt-table/SchienenabschnittTable.css
@@ -18,7 +18,6 @@
 }
 
 .schienenabschnitt-table {
-    height: 20vh;
     overflow-y: auto;
     border: 1px solid var(--color-border);
     border-radius: var(--border-radius);
@@ -52,4 +51,12 @@
     border-color: var(--color-accent-primary);
     outline: none;
     box-shadow: 0 0 0 2px rgba(37, 99, 235, 0.4);
+}
+
+.flex-size {
+    height: 45vh;
+}
+
+.fixed-size {
+    height: 20vh;
 }
