--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,31 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.component {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+
+    border: 1px solid var(--color-border);
+    border-radius: var(--border-radius);
+
+    box-shadow: var(--box-shadow);
+    background-color: var(--color-surface);
+    width: 100%;
+    height: 90vh;
+
+    position: relative;
+}
+
+.component-content {
+    padding: 3%;
+    width: calc(100% - 6%);
+    height: calc(100% - 3%);
+    display: flex;
+    flex-direction: column;
+}
+
 body {
     margin: 0;
     display: flex;
