--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,11 @@
     --basic-element-background-color: 255, 255, 255;
     --color-text-light: #FFFFFF;
     --color-text-dark: #111827;
+
+    --color-table-header-bg: #1d1d1d;
+    --color-table-cell-uneven: #2F2F2F;
+    --color-table-cell-even: #2a2a2a;
+    --color-table-cell-hover: #3a3a3a;
 }
 
 :root {
@@ -101,6 +106,11 @@ h3 {
 
         --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         --basic-element-background-color: 128, 128, 128;
+
+        --color-table-header-bg: #f0f0f0;
+        --color-table-cell-uneven: #ffffff;
+        --color-table-cell-even: #f9f9f9;
+        --color-table-cell-hover: #eaeaea;
     }
 
     a:hover {
