--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@
     box-shadow: var(--box-shadow);
     background-color: var(--color-surface);
     width: 100%;
-    height: 90vh;
+    height: 90%;
 
     position: relative;
 }
