--- a/src/components/details/Details.css
+++ b/src/components/details/Details.css
@@ -7,14 +7,12 @@
 }
 
 .schienenabschnitte {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    overflow: auto;
+
     border-radius: var(--border-radius);
     background-color: var(--color-card);
     padding: 1rem 1.5rem;
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-}
-
-.table-height {
-    flex-grow: 1;
 }
