--- a/src/components/kunden-form/KundenForm.css
+++ b/src/components/kunden-form/KundenForm.css
@@ -1,20 +1,23 @@
 .kunden-form {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 3%);
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
 .schienenabschnitt-table-card {
-    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    overflow: auto;
+
     border-radius: var(--border-radius);
     background-color: var(--color-card);
     padding: 1rem 1.5rem;
 }
 
 .kunden-inputs-card {
-    flex: 1;
     border-radius: var(--border-radius);
     background-color: var(--color-card);
     padding: 1rem 1.5rem;
