--- a/src/components/schienenabschnitt-table/SchienenabschnittTable.css
+++ b/src/components/schienenabschnitt-table/SchienenabschnittTable.css
@@ -2,6 +2,7 @@
     width: 100%;
     border-collapse: collapse;
     background-color: var(--color-table-cell-uneven);
+    overflow: hidden;
 }
 
 .schienenabschnitt-liste th,
@@ -19,6 +20,7 @@
 }
 
 .schienenabschnitt-table {
+    flex: 1;
     overflow-y: auto;
     border: 1px solid var(--color-border);
     border-radius: var(--border-radius);
@@ -52,12 +54,4 @@
     border-color: var(--color-accent-primary);
     outline: none;
     box-shadow: 0 0 0 2px rgba(37, 99, 235, 0.4);
-}
-
-.flex-size {
-    height: 45vh;
-}
-
-.fixed-size {
-    height: 20vh;
 }
