--- a/src/index.css
+++ b/src/index.css
@@ -45,14 +45,15 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+    flex: 1;
+    overflow: hidden;
 
     border: 1px solid var(--color-border);
     border-radius: var(--border-radius);
 
     box-shadow: var(--box-shadow);
     background-color: var(--color-surface);
-    width: 100%;
-    height: 90%;
+    margin: 5%;
 
     position: relative;
 }
@@ -63,6 +64,8 @@
     height: calc(100% - 3%);
     display: flex;
     flex-direction: column;
+    flex: 1;
+    overflow: auto;
 }
 
 body {
