--- a/src/components/kunden-form/KundenForm.css
+++ b/src/components/kunden-form/KundenForm.css
@@ -19,7 +19,7 @@
     justify-content: space-between;
 }
 
-.add-schienenabschnitt-button {
+.add-button {
     font-size: 1rem;
     border: 2px solid var(--color-border);
     border-radius: var(--border-radius);
