--- a/src/components/back-button/BackButton.css
+++ b/src/components/back-button/BackButton.css
@@ -1,3 +1,5 @@
+/* BackButton.css */
+/* Styles for the floating "X" back button in the top-right corner */
 .back-button {
     position: absolute;
     top: 1rem;
