--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -1,3 +1,5 @@
+/* Card.css */
+/* Styles for a card component with hover effect */
 .card {
     background-color: var(--color-card);
     padding: var(--padding-card);
@@ -8,6 +10,7 @@
     transform-origin: top left;
 }
 
+/* highlights card on hover */
 .card:hover {
     transform: scale(1.02);
     box-shadow: -8px -8px 20px rgba(0, 123, 255, 0.2),
