--- a/src/components/schienenabschnitt-table/SchienenabschnittTable.css
+++ b/src/components/schienenabschnitt-table/SchienenabschnittTable.css
@@ -1,3 +1,5 @@
+/* SchienenabschnittTable.css */
+/* Styles for the SchienenabschnittTable component */
 .table-input {
     width: calc(100% - 1.5rem);
     background-color: rgba(var(--basic-element-background-color), 0.05); /* very light background */
