--- a/src/shared/table.css
+++ b/src/shared/table.css
@@ -33,16 +33,12 @@
     background-color: var(--color-table-header-bg);
 }
 
-/* Container for responsive table layout */
-.table-container {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    overflow: auto;
-
-    border-radius: var(--border-radius);
-    background-color: var(--color-card);
-    padding: 1rem 1.5rem;
+@media (max-height: 500px) {
+    .table thead th {
+        position: relative;
+        top: 0;
+        z-index: 0;
+    }
 }
 
 @media (max-width: 600px) {
@@ -73,7 +69,7 @@
         width: fit-content;
         z-index: 10;
         position: absolute;
-        right: 3rem;
+        right: 10%;
         background-color: transparent;
     }
 
@@ -107,10 +103,15 @@
     }
 
     .table td::before {
+        box-sizing: border-box;
         content: attr(data-label);
         position: absolute;
         left: 1rem;
+        top: 0.5rem;
         font-weight: bold;
         white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 40%; /* should match padding-left minus left offset */
     }
 }
